src/test/ui/nll/user-annotations/normalization.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/normalization.rs:9:31
   |
LL |     let b: <() as Foo>::Out = &a;
   |            ----------------   ^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `a` is borrowed for `'static`
LL | }
   | - `a` dropped here while still borrowed
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/normalization.rs:9:12
   |
LL |     let b: <() as Foo>::Out = &a;
   |            ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
